--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -79,50 +79,64 @@ body {
 -------------------------------------------------------------------------------*/
 
 .footer {
-	text-align: left;
-    margin-top: 5rem;
+  text-align: left;
+  margin-top: 5rem;
 }
 .footer-top {
-	background-color: #181818;
-	padding-top: 50px;
+  background-color: #181818;
+  padding-top: 50px;
 }
 .footer-bottom {
-	background-color: #313454;
-	padding: 20px 0;
+  background-color: #313454;
+  padding: 20px 0;
 }
 .footer .footer-col {
-	margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 .footer h5 {
-	color: #fff;
+  color: #fff;
 }
 .footer h5 {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .footer p {
-	color: rgba(255, 255, 255, 0.25);
+  color: rgba(255, 255, 255, 0.25);
 }
 .footer a {
-	color: rgba(255, 255, 255, 0.50);
+  color: rgba(255, 255, 255, 0.5);
 }
 .footer a:hover {
-	color: #e84545;
+  color: #e84545;
 }
 .footer .footer-share {
-	margin-top: 50px;
-    padding: 0 !important;
+  margin-top: 50px;
+  padding: 0 !important;
 }
 .footer .footer-share li {
-	display: inline-block;
-	float: none;
+  display: inline-block;
+  float: none;
 }
 .footer .footer-share a {
-	border: none;
-	font-size: 21px;
-	color: rgba(255, 255, 255, 0.25);
+  border: none;
+  font-size: 21px;
+  color: rgba(255, 255, 255, 0.25);
 }
 .footer .fa-heart {
-	color: #e84545;
-	font-size: 11px;
-	margin: 0 2px;
+  color: #e84545;
+  font-size: 11px;
+  margin: 0 2px;
+}
+
+/* ------------------------------------------------------------------------------
+	 MediaQuery
+-------------------------------------------------------------------------------*/
+
+@media (max-width: 1024px) {
+  #carouselExampleIndicators {
+    display: none !important;
+  }
+
+  #suggest {
+    margin-top: 5rem !important;
+  }
 }
